# aivis-mcp

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
mcp-apps/: .env.example  .gitignore  README.md  mcp-app.html  package.json  server.ts  tsconfig.json  vite.config.ts
mcp-apps/src/: aivis-client.ts  mcp-app.ts
mcp-apps/tests/: aivis-client.test.ts
